# learning-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/sb7/include/: vmath.h
obj_generator/: __main__.py
src/: ConfigStore.cpp  ConfigStore.h  Constants.h  ControlState.cpp  ControlState.h  Game.cpp  Game.h  Player.cpp  Player.h  Position.cpp  Position.h  Renderer.cpp  Renderer.h  TODO.md  Window.cpp  Window.h  World.cpp  World.h  experimentation_main.cpp  main.cpp
src/Game/: Bullet.cpp  Bullet.h  Game.cpp  Game.h  GameState.h  Player.cpp  Player.h  World.cpp  World.h  WorldObject.h  WorldState.h
src/Game/Objects/: Bullet.cpp  Bullet.h  ChaserEnemy.cpp  ChaserEnemy.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h  SimpleEnemy.cpp  SimpleEnemy.h  WorldObject.cpp  WorldObject.h
src/Interface/: ControlState.cpp  ControlState.h  GameControlState.cpp  GameControlState.h  GameOverControlState.cpp  GameOverControlState.h  PausedControlState.cpp  PausedControlState.h  Window.cpp  Window.h
src/Renderer/: ObjLoader.cpp  ObjLoader.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
src/Renderer/Models/: BaseModel.cpp  BaseModel.h  BulletModel.cpp  BulletModel.h  ChaserEnemyModel.cpp  ChaserEnemyModel.h  EnemyModel.cpp  EnemyModel.h  ModelType.h  PlayerModel.cpp  PlayerModel.h  SimpleEnemyModel.cpp  SimpleEnemyModel.h  WorldModel.cpp  WorldModel.h
src/Resources/Shaders/: 1.color.frag  1.color.vert  shader.frag  shader.vert  star.frag  star.vert
src/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.hpp
src/Shaders/: ShaderCompiler.cpp  ShaderCompiler.hpp  shader.frag  shader.vert  text.frag  text.vert
src/Utils/: ConfigStore.cpp  ConfigStore.h  Constants.h  Random.cpp  Random.h
